--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "add-weak-listener",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Add weak event listeners based on WeakRefs",
-  "main": "index.js",
+  "main": "cjs/index.js",
+  "module": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "tsc -p ."
+    "build": "tsc -p .; tsc --module commonjs --outDir dist/cjs -p .",
+    "publish": "build"
   },
   "repository": {
     "type": "git",
