--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "add-weak-listener",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Add weak event listeners based on WeakRefs",
-  "main": "cjs/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
